# rules_ispc

./: BUILD.bazel  EXAMPLE_VERSION_123.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  MODULE.bazel  README.md  VERSION_SELECTION.md  WORKSPACE  WORKSPACE.bazel  bp.patch  extensions.bzl  fetch_ispc.bzl  ispc.bzl  ispc_windows_x86_64.BUILD
.bcr/: metadata.template.json
.github/workflows/: bazel_build.yml  codespell.yml  release.yml  release_prep.sh
common/: BUILD.bazel
examples/common/: BUILD.bazel
tests/: .bazelrc  MODULE.bazel
tests/aobench/: BUILD.bazel  README.md  ao.cpp
tests/defines/: BUILD.bazel  main.cpp  square.h
tests/defines_example/: BUILD.bazel  main.cpp  square.ispc
tests/example/: BUILD.bazel  README.md  main.cpp
tests/include_example/: BUILD.bazel  README.md  main.cpp  math.isph  square.ispc
tests/square/: BUILD.bazel  README.md  main.cpp
tools/: BUILD.bazel  ispc_toolchain.bzl
