load(":ispc_toolchain.bzl", "ispc_toolchain")

package(default_visibility = ["//visibility:public"])

toolchain_type(name = "toolchain_type")

ispc_toolchain(
    name = "ispc_linux",
    data = [
        "@ispc_linux_x86_64//:ispc",
    ],
    ispc_cmd = "$(location @qt_linux_x86_64//:ispc)",
)

ispc_toolchain(
    name = "ispc_windows",
    data = [
        "@ispc_windows_x86_64//:ispc",
    ],
    ispc_cmd = "$(location @qt_windows_x86_64//:ispc)",
)

ispc_toolchain(
    name = "ispc_osx",
    data = [
        "@ispc_mac_x86_64//:ispc",
    ],
    ispc_cmd = "$(location @ispc_mac_x86_64//:ispc)",
)

toolchain(
    name = "ispc_linux_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":ispc_linux",
    toolchain_type = "@rules_ispc//tools:toolchain_type",
)

toolchain(
    name = "ispc_windows_toolchain",
    exec_compatible_with = [
        "@platforms//os:windows",
    ],
    target_compatible_with = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":ispc_windows",
    toolchain_type = "@rules_ispc//tools:toolchain_type",
)

toolchain(
    name = "ispc_osx_toolchain",
    exec_compatible_with = [
        "@platforms//os:osx",
    ],
    target_compatible_with = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":ispc_osx",
    toolchain_type = "@rules_ispc//tools:toolchain_type",
)
